@@ -1,3 +1,8 @@
+2000-07-20  H.J. Lu  <hjl@gnu.org>
+
+	* elflink.h (NAME(bfd_elf,size_dynamic_sections)): Set
+	DT_RUNPATH and DT_FLAGS only if info->new_dtags is true.
+
 2000-07-20  Hans-Peter Nilsson  <hp@axis.com>
 
 	* Makefile.am (ALL_MACHINES): Add cpu-cris.lo.
@@ -39,7 +44,7 @@
 	* elf64-ia64.c (elf64_ia64_size_dynamic_sections): Likewise.
 	* elf64-sparc.c (sparc64_elf_size_dynamic_sections): Likewise.
 
-	* bfd/elflink.h (NAME(bfd_elf,size_dynamic_sections)): Also
+	* elflink.h (NAME(bfd_elf,size_dynamic_sections)): Also
 	set DF_SYMBOLIC for symbolic link. Also set DT_RUNPATH if
 	DT_RPATH is set.
 	Set the DT_FLAGS and DT_FLAGS_1 entries if necessary.
